Add version to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@awuxtron/eslint-config",
+    "version": "1.0.0",
     "description": "My personal ESLint configuration",
     "license": "MIT",
     "keywords": [
